--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
     "modernizr": "~2.6.2",
     "sass-bootstrap": "2.3.2",
     "lodash": "~2.4.1",
-    "parse-angular-patch": "*",
+    "parse-angular-patch": "git://github.com/brandid/parse-angular-patch#715050a9f52cd78d099e17aa48797474d70f70ac",
     "angular-ui-router": "~0.2.10"
   }
 }
